# rustbof

./: .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.template/: Cargo.toml.liquid  Makefile.toml
.template/.cargo/: config.toml
.template/src/: lib.rs
crates/rustbof/: Cargo.toml
crates/rustbof-derive/: Cargo.toml
crates/rustbof-derive/src/: lib.rs
crates/rustbof/src/: allocator.rs  data.rs  download.rs  lib.rs  macros.rs  output.rs  store.rs  str.rs  token.rs
examples/env/: Cargo.toml  Makefile.toml
examples/env/.cargo/: config.toml
examples/env/src/: lib.rs
examples/ipconfig/: Cargo.toml  Makefile.toml
examples/ipconfig/src/: lib.rs
examples/whoami/: Cargo.toml  Makefile.toml
examples/whoami/src/: helpers.rs  lib.rs
