[package]
name = "rustbof-derive"
description = "Derive macros for Beacon Object File in Rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.114", features = ["full"] }
