[package]
name = "ipconfig"
version = "0.1.0"
edition = "2024"
authors = ["João Victor"]
description = "Example BOF: Get IP configuration"
repository = "https://github.com/joaoviictorti/rustbof"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies.rustbof]
path = "../../crates/rustbof"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
]

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
lto = true