[package]
name = "whoami"
version = "0.1.0"
edition = "2024"
authors = ["João Victor"]
description = "Example BOF: Get current user information"
repository = "https://github.com/joaoviictorti/rustbof"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies.rustbof]
path = "../../crates/rustbof"

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authentication",
    "Win32_Security_Authentication_Identity",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
lto = true